Make sure that all transactions have a valid post date when a consistency check is run.

Also make sure that MyMoneyReport::validDateRange returns a valid
date range no matter what data is in the file. This avoids having
a run-away kmymoney process when opening reports.

BUG: 310265
(cherry picked from commit 7465f1bf1e11dd615aeb2a3ae8de04be44ac5713)